# clerk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clerk_poster.html  config.example.toml
.github/workflows/: ci.yml
crates/clerk-core/: Cargo.toml
crates/clerk-core/src/: bootstrap.rs  config.rs  lib.rs  media.rs  prompt.rs  text.rs
crates/clerk-core/src/agent/: mod.rs  runner.rs  session.rs
crates/clerk-core/src/agent/llm/: mod.rs  openai.rs
crates/clerk-core/src/mcp/: client.rs  transport.rs
crates/clerk-core/src/skills/: loader.rs  writer.rs
crates/clerk-core/src/store/: sqlite.rs
crates/clerk-core/src/tools/: browser.rs  mod.rs  office.rs  ppt.rs  schema.rs  write_skill.rs
crates/clerk-gui/: Cargo.toml  tauri.conf.json
crates/clerk-gui/src/: lib.rs  main.rs
crates/clerk-gui/ui/: app.js  index.html  package.json  pnpm-lock.yaml  style.css  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/clerk-gui/ui/src/: App.vue  api.ts  main.ts  types.ts
crates/clerk-gui/ui/src/components/: ApprovalBar.vue  ChatInput.vue  ChatList.vue  ChatMessage.vue  FileChip.vue  StatusBar.vue
crates/clerk-gui/ui/src/stores/: chat.ts  session.ts
crates/clerk-gui/ui/src/styles/: index.css
docs/: tauri-vue3-frontend-plan.md
src/: app.rs  cli.rs  config.rs  main.rs  util.rs
src/agent/: mod.rs  runner.rs  session.rs  subagent.rs  subagent_manager.rs
src/agent/llm/: client.rs  mod.rs  openai.rs
src/mcp/: client.rs  transport.rs  types.rs
src/skills/: inject.rs  loader.rs  mod.rs  parser.rs  writer.rs
src/store/: mod.rs  sqlite.rs
src/tools/: browser.rs  collaborate.rs  fs.rs  media.rs  mod.rs  office.rs  pdf.rs  poster.rs  registry.rs  render_image.rs  schema.rs  shell.rs  subagent.rs  web.rs  write_skill.rs
src/ui/: chat.rs  input.rs  markdown.rs  mod.rs
~/.config/clerk/: clerk.db
