[package]
name = "clerk"
version = "0.1.0"
edition = "2024"
description = "A terminal-based office AI agent built with Rust"
license = "GPL-3.0"
repository = "https://github.com/TUST-Open-Source-Club/clerk"

[workspace]
resolver = "3"
members = ["crates/clerk-core", "crates/clerk-gui"]

[dependencies]
clerk-core = { path = "crates/clerk-core" }
tokio = { version = "1.44", features = ["full"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4"] }
async-trait = "0.1"
tokio-stream = "0.1"
unicode-width = "0.2"
unicode-segmentation = "1.12"
tracing-appender = { version = "0.2.5", default-features = false }
pulldown-cmark = { version = "0.13.4", default-features = false }

[dev-dependencies]
tempfile = "3.14"
image = "0.25"
